Feat: auto gen content
